force-app/main/default/objects/POE_Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of an Event [PER-4044]</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>