force-app/main/default/objects/POE_Event__c/fields/Frontier_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Frontier_User_ID__c</fullName>
    <description>Frontier PID used by Onboarding Team in Events, Phone Sales and D2D</description>
    <label>Frontier User ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>