force-app/main/default/objects/POE_Event__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mark recurring events [PER-4044]</description>
    <label>Is this a Recurring Event?</label>
    <type>Checkbox</type>
</CustomField>