force-app/main/default/objects/POE_Event__c/fields/POE_City__c.field-meta.xml
<CustomField>
    <fullName>POE_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>