force-app/main/default/objects/POE_Event__c/fields/POE_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>POE_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>