force-app/main/default/objects/POE_Event__c/fields/POE_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>POE_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>