force-app/main/default/objects/POE_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of an Event [PER-4044]</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>