force-app/main/default/objects/POE_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of an Event [PER-4044]</description>
    <formula>IF(NOT(ISBLANK(End_Date__c)) &amp;&amp; End_Date__c &lt; TODAY(), &quot;Archived&quot;, &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check if the event has an end date and if that date has already passed</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>