force-app/main/default/objects/POE_Event__c/validationRules/Frontier_Information_Not_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Frontier_Information_Not_Complete</fullName>
    <active>true</active>
    <description>If Frontier PID is filled, then Frontier UserID must be required and vice-versa.</description>
    <errorConditionFormula>OR(AND(NOT(ISBLANK( Frontier_User_ID__c )),ISBLANK( Frontier_PID__c )),AND(NOT(ISBLANK( Frontier_PID__c )),ISBLANK( Frontier_User_ID__c )))</errorConditionFormula>
    <errorMessage>Frontier UserID is required to set Frontier PID and vice-versa.</errorMessage>
</ValidationRule>