force-app/main/default/objects/POE_Event__c/validationRules/Start_date_greater_than_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_greater_than_end_date</fullName>
    <active>true</active>
    <description>Start Date shouldn&apos;t be greater than the end date (if applicable) [PER-4044]</description>
    <errorConditionFormula>NOT(ISBLANK( Start_Date__c )) &amp;&amp; NOT(ISBLANK( End_Date__c )) &amp;&amp; Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorMessage>End Date must be greater than the Start Date</errorMessage>
</ValidationRule>